objects/Anxiety_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Anticipating_or_Fearing_Frequency__c</fullName>
        <description>Anticipating or Fearing something Bad Might Happen Frequency</description>
        <label>ANX_v1.0.32</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipating_or_Fearing_Intensity__c</fullName>
        <description>Anticipating or Fearing something Bad Might Happen Intensity</description>
        <label>ANX_v1.0.31</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anxiety_Frequency__c</fullName>
        <description>Anxiety Frequency</description>
        <label>ANX_v1.0.2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anxiety_Intensity__c</fullName>
        <description>Anxiety Intensity</description>
        <label>ANX_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Anxiety_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dizziness_Headaches_Trembling_Frequency__c</fullName>
        <description>Dizziness Lightheadedness Headaches Trembling or Shak Iness Frequency</description>
        <label>ANX_v1.0.26</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dizziness_Headaches_Trembling_Intensity__c</fullName>
        <description>Dizziness Lightheadedness Headaches Trembling or Shak Iness Intensity</description>
        <label>ANX_v1.0.25</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fatigue_or_lack_of_Energy_Frequency__c</fullName>
        <description>Fatigue or lack of Energy Frequency</description>
        <label>ANX_v1.0.16</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fatigue_or_lack_of_Energy_Intensity__c</fullName>
        <description>Fatigue or lack of Energy Intensity</description>
        <label>ANX_v1.0.15</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feeling_Restless_Keyed_Up_Frequency__c</fullName>
        <description>Feeling Restless Keyed Up or On Edge Frequency</description>
        <label>ANX_v1.0.30</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feeling_Restless_Keyed_Up_Intensity__c</fullName>
        <description>Feeling Restless Keyed Up or On Edge Intensity</description>
        <label>ANX_v1.0.29</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irritability_Frequency__c</fullName>
        <description>Irritability Frequency</description>
        <label>ANX_v1.0.8</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irritability_Intensity__c</fullName>
        <description>Irritability Intensity</description>
        <label>ANX_v1.0.7</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muscle_Tension_or_Tightness_Frequency__c</fullName>
        <description>Muscle Tension or Tightness Frequency</description>
        <label>ANX_v1.0.10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muscle_Tension_or_Tightness_Intensity__c</fullName>
        <description>Muscle Tension or Tightness Intensity</description>
        <label>ANX_v1.0.9</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nausea_constipation_Diarrhea_Frequency__c</fullName>
        <description>Stomach Upset Nausea constipation Dlarrhea or irritable Bowels Frequency</description>
        <label>ANX_v1.0.24</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nausea_constipation_Diarrhea_Intensity__c</fullName>
        <description>Stomach Upset Nausea constipation Dlarrhea or irritable Bowels Intensity</description>
        <label>ANX_v1.0.23</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nervousness_Frequency__c</fullName>
        <description>Nervousness Frequency</description>
        <label>ANX_v1.0.4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nervousness_Intensity__c</fullName>
        <description>Nervousness Intensity</description>
        <label>ANX_v1.0.3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numbness_Sweating_Flushing_Frequency__c</fullName>
        <description>Numbness Tingling Excessive Sweating Flushing or Frequent Urination Frequency</description>
        <label>ANX_v1.0.28</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numbness_Sweating_Flushing_Intensity__c</fullName>
        <description>Numbness Tingling Excessive Sweating Flushing or Frequent Urination Intensity</description>
        <label>ANX_v1.0.27</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problems_with_Attention_Frequency__c</fullName>
        <description>Problems with Attention Frequency</description>
        <label>ANX_v1.0.18</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problems_with_Attention_Intensity__c</fullName>
        <description>Problems with Attention Intensity</description>
        <label>ANX_v1.0.17</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shortness_of_Chest_Tightness_Frequency__c</fullName>
        <description>Shortness of Breath Chest Tightness Frequency</description>
        <label>ANX_v1.0.22</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shortness_of_Chest_Tightness_Inte__c</fullName>
        <description>Shortness of Breath Chest Tightness Â Intensity</description>
        <label>ANX_v1.0.21</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trouble_Fall_or_stay_Asleep_Frequency__c</fullName>
        <description>Trouble Fall or stay Asleep Frequency</description>
        <label>ANX_v1.0.14</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trouble_Fall_or_stay_Asleep_Intensity__c</fullName>
        <description>Trouble Fall or stay Asleep Intensity</description>
        <label>ANX_v1.0.13</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trouble_Functioning_at_Home_Frequency__c</fullName>
        <description>Trouble Functioning at Home Work or socially Due to Anxlety Frequency</description>
        <label>ANX_v1.0.34</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trouble_Functioning_at_Home_Intensity__c</fullName>
        <description>Trouble Functioning at Home Work or socially Due to Anxlety Intensity</description>
        <label>ANX_v1.0.33</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trouble_Relaxing_Frequency__c</fullName>
        <description>Trouble Relaxing Frequency</description>
        <label>ANX_v1.0.12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trouble_Relaxing_Intensity__c</fullName>
        <description>Trouble Relaxing Intensity</description>
        <label>ANX_v1.0.11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trouble_Remembering_Things_Frequency__c</fullName>
        <description>Trouble Remembering Things Frequency</description>
        <label>ANX_v1.0.20</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trouble_Remembering_Things_Intensity__c</fullName>
        <description>Trouble Remembering Things Intensity</description>
        <label>ANX_v1.0.19</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worrying_Frequency__c</fullName>
        <description>Worrying Frequency</description>
        <label>ANX_v1.0.6</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worrying_Intensity__c</fullName>
        <description>Worrying Intensity</description>
        <label>ANX_v1.0.5</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ANX</label>
    <nameField>
        <displayFormat>ANX-{0000000000}</displayFormat>
        <label>ANX Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ANXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>